language/move-lang/tests/move_check/expansion/duplicate_module_after_mapping.exp
error: 

   ┌── tests/move_check/expansion/duplicate_module_after_mapping.move:7:14 ───
   │
 7 │ module OneB::M {}
   │              ^ Duplicate definition of 'OneB::M', with 'OneB' = 0x1
   ·
 6 │ module OneA::M {}
   │              - Previously defined here as 'OneA::M', with 'OneA' = 0x1
   │

error: 

    ┌── tests/move_check/expansion/duplicate_module_after_mapping.move:12:14 ───
    │
 12 │ module TwoB::M {}
    │              ^ Duplicate definition of 'TwoB::M', with 'TwoB' = 0x2
    ·
 11 │ module 0x2::M {}
    │             - Previously defined here as '0x2::M'
    │

error: 

    ┌── tests/move_check/expansion/duplicate_module_after_mapping.move:17:13 ───
    │
 17 │ module 0x3::M {}
    │             ^ Duplicate definition of '0x3::M'
    ·
 16 │ module ThreeA::M {}
    │                - Previously defined here as 'ThreeA::M', with 'ThreeA' = 0x3
    │

